<resources>
    <string name="app_name">atividade07</string>
    <string name="nome_completo">Nome completo</string>
    <string name="salvar">Salvar</string>
    <string name="pr_xima_tela">Próxima Tela</string>
    <string name="limpar">Limpar</string>
    <string name="e_mail">E-mail</string>
    <string name="foto_do_perfil">Foto do perfil</string>
    <string name="perfil_dados_basicos">Perfil - Dados Básicos</string>
    <string name="hint_nome">Fulano Beltrano</string>
    <string name="hint_seu_email_com">seu@email.com</string>
    <string name="personalizar_o_app">Personalizar o app</string>
    <string name="alto_contraste">Alto Contraste</string>
</resources>