<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@color/secondary"
        android:contentDescription="@string/foto_do_perfil"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/perfil_dados_basicos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />

    <TextView
        android:id="@+id/lblNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/eTxtNome"
        android:text="@string/nome_completo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/eTxtNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth="match_constraint" />

    <EditText
        android:id="@+id/eTxtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="name"
        android:background="@color/surface"
        android:ems="10"
        android:includeFontPadding="false"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/lblEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNome"
        app:layout_constraintWidth="match_constraint" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/eTxtEmail"
        android:text="@string/e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/eTxtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtNome"
        app:layout_constraintWidth="match_constraint" />

    <EditText
        android:id="@+id/eTxtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@color/surface"
        android:ems="10"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        app:layout_constraintWidth="match_constraint" />

    <Button
        android:id="@+id/btnSalvar"
        style="@style/RetangularButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary"
        android:drawableTop="@android:drawable/ic_menu_save"
        android:drawableTint="@color/onPrimary"
        android:text="@string/salvar"
        android:textColor="@color/onPrimary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth="match_constraint" />

    <Button
        android:id="@+id/btnProximaTela"
        style="@style/RetangularButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary"
        android:drawableTop="@android:drawable/ic_media_next"
        android:drawableTint="@color/onPrimary"
        android:text="@string/pr_xima_tela"
        android:textColor="@color/onPrimary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"
        app:layout_constraintWidth="match_constraint" />

    <Button
        android:id="@+id/btnLimpar"
        style="@style/RetangularButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary"
        android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
        android:drawableTint="@color/onPrimary"
        android:text="@string/limpar"
        android:textColor="@color/onPrimary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnProximaTela"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSalvar"
        app:layout_constraintWidth="match_constraint" />

</androidx.constraintlayout.widget.ConstraintLayout>